# recruitment-management

./: .gitignore  LICENSE  README.md  docker-compose.yaml  docker.env
api/: Dockerfile  pyproject.toml  requirements.txt  tox.ini
api/config/: settings.py  urls.py
api/scripts/: wait-for-it.sh
api/v1/: constance.py  urls.py
api/v1/migrations/: 0001_initial.py
api/v1/models/: __init__.py  base.py  job_ads.py  job_master.py  job_seeker.py  progress.py  user.py
api/v1/serializers/: __init__.py  login.py  user.py
api/v1/views/: __init__.py  login.py  user.py
